Build Footer Block

--- a/index.html
+++ b/index.html
@@ -15,49 +15,99 @@
     <title>Smithified.com</title>
   </head>
   <body>
-    <section class="site-block">
-      <header class="site-block__header">
-        <h2 class="site-block__heading">What our customers are saying</h2>
-      </header>
-      <div class="container">
-        <div class="card testimonial">
-          <div class="grid grid--cols-2">
-            <div class="testimonial__image">
-              <span class="icon-container icon-container--accent">
-                <svg class="icon icon--small icon--white">
-                  <use href="css/images/icon-sprite-sheet.svg#quotes"></use>
-                </svg>
-              </span>
-              <img
-                src="/css/images/testimonial.jpg"
-                alt="A satisfied customer"
-              />
-            </div>
-            <blockquote class="quote">
-              <p class="quote___text">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Ratione veritatis molestiae dicta velit, laudantium nihil in
-                corrupti molestias accusantium ad?
-              </p>
-              <footer>
-                <div class="media">
-                  <div class="media__image">
-                    <svg class="icon icon--primary quote__line">
-                      <use href="css/images/icon-sprite-sheet.svg#line"></use>
-                    </svg>
-                  </div>
-                  <div class="media__body">
-                    <h3 class="media__title quote__author">
-                      Cletus Snarwinsmicherakinsder
-                    </h3>
-                    <p class="quote__company">ABC Company</p>
-                  </div>
-                </div>
-              </footer>
-            </blockquote>
+    <footer class="site-block site-block--dark block__footer">
+      <div class="container grid block__footer__grid">
+        <section
+          class="collapsible collapsible--expanded block__footer__section"
+        >
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading block__footer__heading">
+              Products
+            </h2>
+            <img
+              class="icon collapsible__chevron"
+              src="/css/images/chevron.svg"
+              alt=""
+            />
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li class="block__footer__list-item"><a href="">Item1</a></li>
+              <li class="block__footer__list-item"><a href="">Item2</a></li>
+              <li class="block__footer__list-item"><a href="">Item3</a></li>
+              <li class="block__footer__list-item"><a href="">Item4</a></li>
+            </ul>
           </div>
-        </div>
+        </section>
+
+        <section
+          class="collapsible collapsible--expanded block__footer__section"
+        >
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading block__footer__heading">Company</h2>
+            <img
+              class="icon collapsible__chevron"
+              src="/css/images/chevron.svg"
+              alt=""
+            />
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li class="block__footer__list-item"><a href="">Item1</a></li>
+              <li class="block__footer__list-item"><a href="">Item2</a></li>
+              <li class="block__footer__list-item"><a href="">Item3</a></li>
+              <li class="block__footer__list-item"><a href="">Item4</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section
+          class="collapsible collapsible--expanded block__footer__section"
+        >
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading block__footer__heading">Support</h2>
+            <img
+              class="icon collapsible__chevron"
+              src="/css/images/chevron.svg"
+              alt=""
+            />
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li class="block__footer__list-item"><a href="">Item1</a></li>
+              <li class="block__footer__list-item"><a href="">Item2</a></li>
+              <li class="block__footer__list-item"><a href="">Item3</a></li>
+              <li class="block__footer__list-item"><a href="">Item4</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section
+          class="collapsible collapsible--expanded block__footer__section"
+        >
+          <header class="collapsible__header">
+            <h2 class="collapsible__heading block__footer__heading">Domain</h2>
+            <img
+              class="icon collapsible__chevron"
+              src="/css/images/chevron.svg"
+              alt=""
+            />
+          </header>
+          <div class="collapsible__content">
+            <ul class="list">
+              <li class="block__footer__list-item"><a href="">Item1</a></li>
+              <li class="block__footer__list-item"><a href="">Item2</a></li>
+              <li class="block__footer__list-item"><a href="">Item3</a></li>
+              <li class="block__footer__list-item"><a href="">Item4</a></li>
+            </ul>
+          </div>
+        </section>
+        <section class="block__footer__branding">
+          <img src="/css/images/logo.svg" alt="" />
+          <p>Mosh&nbsp;Hamedani<br />ⓒ2020</p>
+        </section>
       </div>
-    </section>
+    </footer>
+    <script src="/javascript/main.js"></script>
   </body>
 </html>
